--- a/Premium.html
+++ b/Premium.html
@@ -4,7 +4,7 @@
     </head>
     <style>
        body{
-        background-image: url(file:///C:/Users/ELCOT/Desktop/ht_pro/.vscode/img/Theme%20181.jpg); 
+        background-image: url(img/Theme 181.jpg); 
         background-size: cover;
         opacity: 0.6;
        }
