--- a/More.html
+++ b/More.html
@@ -43,8 +43,8 @@
         </marquee>
     </div>
     <div class="container">
-        <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\12.jpg" alt=""></div>
-        <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\11.jpg" alt=""></div>
+        <div class="box"><img src="Images/12.jpg" alt=""></div>
+        <div class="box"><img src="Images\11.jpg" alt=""></div>
         <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\6.jpg" alt=""></div>
         <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\2.jpg" alt=""></div>
         <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\7.jpg" alt=""></div>
