--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <br>
     <div class="container">
         <div class="box"><img src="1.jpg" alt=""></div>
-        <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\2.jpg" alt=""></div>
+        <div class="box"><img src="2.jpg" alt=""></div>
         <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\3.jpg" alt=""></div>
         <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\4.jpg" alt=""></div>
         <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\5.jpg" alt=""></div>
