--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
     <br>
     <div class="container">
         <div class="box"><img src="Images/1.jpg" alt=""></div>
-        <div class="box"><img src="/Images/2.jpg" alt=""></div>
-        <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\3.jpg" alt=""></div>
-        <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\4.jpg" alt=""></div>
-        <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\5.jpg" alt=""></div>
-        <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\6.jpg" alt=""></div>
-        <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\7.jpg" alt=""></div>
-        <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\8.jpg" alt=""></div>
-        <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\9.jpg" alt=""></div>
-        <div class="box"><img src="C:\Users\ELCOT\Desktop\ht_pro\Images\10.jpg" alt=""></div>
+        <div class="box"><img src="Images/2.jpg" alt=""></div>
+        <div class="box"><img src="Images/3.jpg" alt=""></div>
+        <div class="box"><img src="Images/4.jpg" alt=""></div>
+        <div class="box"><img src="Images/5.jpg" alt=""></div>
+        <div class="box"><img src="Images/6.jpg" alt=""></div>
+        <div class="box"><img src="Images/7.jpg" alt=""></div>
+        <div class="box"><img src="Images/8.jpg" alt=""></div>
+        <div class="box"><img src="Images/9.jpg" alt=""></div>
+        <div class="box"><img src="Images/10.jpg" alt=""></div>
     </div>
     <br>
     <footer>
