--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         .me{
             height: 100px;
             width: 100px;
-            background-image: url(https://github.com/Jiiva-G/Jeeva/blob/main/img/IMG_20220616_155305_073.webp);
+            background-image: url(img/IMG_20220616_155305_073.webp);
             background-size: cover;
             border-radius: 100px;
             margin-right: auto;
