--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
             margin-right:500px;
             
         }
+        .tex{
+            width:30px;
+            height:30px;
+        }
 
     </STYle>
     <link rel="stylesheet" href="gallery.css">
@@ -133,7 +137,7 @@
         <div class="feed">
         <label for="">Feedback</label>
     </div>
-        <input type="text">
+        <input class="tex" type="text">
         <button class="btn">Contact Us</button>
     </footer>
     
