--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
         }
         .tex{
             width:140px;
-            height:30px;
+            height:50px;
+            outline:none;
         }
 
     </STYle>
