--- a/Premium.html
+++ b/Premium.html
@@ -4,7 +4,7 @@
     </head>
     <style>
        body{
-        background-image: url(img\Theme 181.jpg); 
+        background-image: url(img/Theme 181.jpg); 
         background-size: cover;
         opacity: 0.6;
        }
