--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             border: none;
             border-radius: 50px;
             transition: 0.3s;
+            height: 50px;
+            width: 120px;
         }
         .btn:hover{
             background-color: #30336b;
